--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>proyecto</title>
 </head>
 <body>
-    <h1>Ejercicio 4</h1>
+    <h1>Ejercicios</h1>
     <script src="/script.js"></script>
 </body>
 </html>
